--- a/src/style/scss/global.scss
+++ b/src/style/scss/global.scss
@@ -5,22 +5,36 @@
 	z-index: 9147483647 !important;
 }
 
-.el-checkbox__inner{
+.el-checkbox__inner {
 	z-index: 0 !important;
 }
 
-.el-statistic__content{
+.el-statistic__content {
 	font-size: large !important;
 }
 
 :root {
-	&[data-show-scrollbar="false"] > ::-webkit-scrollbar {
-		width: 0px !important;
-		height: 0px !important;
-		transition: all 0.5s;
+	&[data-show-scrollbar="false"] {
+		overflow: hidden;
+		> ::-webkit-scrollbar {
+			width: 0px !important;
+			height: 0px !important;
+			transition: all 0.5s;
+		}
 	}
 }
 
 [class*="el-input"] {
 	border: 0 !important;
 }
+
+.onlineGallery-container svg,
+.onlineGallery-child-window-container svg {
+	width: auto !important;
+	height: auto !important;
+}
+
+// .fancybox__content {
+// 	width: auto !important;
+// 	height: auto !important;
+// }
