--- a/src/assets/css/fix.less
+++ b/src/assets/css/fix.less
@@ -21,7 +21,7 @@
 	[type="button"] {
 		all: auto;
 	}
-	button.f-button {
+	.f-button {
 		background: unset;
 	}
 }
@@ -42,4 +42,10 @@
 div[data-v-app]:has(.var-transition-group .var-snackbar) {
 	position: relative;
 	z-index: 2147483647;
+}
+
+// 修复Fancybox的ToolBar中图标遮挡了点击事件的bug
+.fancybox__toolbar button > svg {
+	// pointer-events: none;
+	z-index: -1;
 }
