Discovered a bug: the el-tree component fails to keep previously expanded nodes expanded when the data changes

--- a/src/styles/fix.less
+++ b/src/styles/fix.less
@@ -5,7 +5,7 @@
 	}
 }
 
-.web-img-collector-container {
+.web-img-collector-container .gallery-container {
 	textarea,
 	input[type="text"],
 	input[type="email"],
