--- a/src/styles/fix.less
+++ b/src/styles/fix.less
@@ -5,18 +5,7 @@
 	}
 }
 
-.web-img-collector-container .gallery-container {
-	textarea,
-	input[type="text"],
-	input[type="email"],
-	input[type="search"],
-	input[type="button"],
-	input[type="submit"],
-	input[type="password"],
-	input[type="number"] {
-		all: unset;
-	}
-
+.web-img-collector-container {
 	button,
 	[type="button"] {
 		all: auto;
