--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -1,7 +1,5 @@
-* {
-	margin: unset;
-	padding: unset;
-	box-sizing: unset;
-}
-
-
+// * {
+// 	margin: unset;
+// 	padding: unset;
+// 	box-sizing: unset;
+// }
