由于样式污染,弃用vuetify组件库

--- a/src/styles/scrollbar.less
+++ b/src/styles/scrollbar.less
@@ -1,7 +1,7 @@
 /* 滚动条样式(控制滚动条显示与隐藏) */
 :root {
 	&[data-show-scrollbar="false"] {
-		overflow: overlay;
+		// overflow: overlay;
 
 		scrollbar-color: unset;
 		scrollbar-width: unset;
