1.优化fancybox;2.修复与部分网站的样式冲突;3.修复虚拟滚动条bug

--- a/src/styles/fancybox/fix.scss
+++ b/src/styles/fancybox/fix.scss
@@ -6,3 +6,8 @@
 .fancybox__toolbar .fancybox__infobar:not(:first-child):not(:last-child) {
 	background: unset;
 }
+
+.fancybox__content:has(.fancybox__iframe) {
+	padding: unset;
+}
+
