--- a/src/styles/element/fix.scss
+++ b/src/styles/element/fix.scss
@@ -1,3 +1,15 @@
+// 颜色自定义
+.web-img-collector-container,
+.wic2-popper,
+.wic2-message,
+.wic2-notification {
+	--wic2-color-primary: #3a7afe;
+	--wic2-color-danger: #f44336;
+	--wic2-color-success: #00c48f;
+	--wic2-color-warning: #ff9f00;
+	// --wic2-color-info: #00afef;
+}
+
 .wic2-popper,
 .wic2-message,
 .wic2-notification {
@@ -10,4 +22,8 @@
 
 .web-img-collector-container .wic2-drawer__body {
 	padding: unset;
+}
+
+.web-img-collector-container .wic2-badge__content {
+	border: unset;
 }
