1.新增6种排序模式;2.修复默认方案和规则可被修改的bug;3.布局优化

--- a/src/styles/element/fix.scss
+++ b/src/styles/element/fix.scss
@@ -28,3 +28,7 @@
 .web-img-collector-container .wic2-badge__content {
 	border: unset;
 }
+
+.web-img-collector-container .wic2-select__input{
+	border: unset;
+}
