1.修复脚本UI与部分网站的样式冲突;2.`禁用按钮`位置调整至规则卡片的header上;3.`结果修复`规则的添加按钮进行外观调整美化

--- a/src/styles/fix.scss
+++ b/src/styles/fix.scss
@@ -1,6 +1,7 @@
 @import "./element/fix";
 @import "./fancybox/fix";
 @import "./varlet-ui/fix";
+@import "./naive-ui/fix";
 
 .v-overlay-container {
 	z-index: 2147483647;
