--- a/src/styles/website/index.scss
+++ b/src/styles/website/index.scss
@@ -1,3 +1,7 @@
 [data-host="cosplaytele.com"] {
 	@import "./cosplaytele.com.scss";
 }
+
+[data-host="www.asianude4u.net"] {
+	@import "./www.asianude4u.net.scss";
+}
