1.新增 UI 测试页面;2.将`方案编辑器`的`Tree`组件更改为`NaiveUI`的`Tree`组件;3.修复部分样式 bug

--- a/src/styles/element/fix.scss
+++ b/src/styles/element/fix.scss
@@ -29,6 +29,10 @@
 	border: unset;
 }
 
-.web-img-collector-container .wic2-select__input{
+.web-img-collector-container .wic2-select__input {
 	border: unset;
+}
+
+.web-img-collector-container .wic2-button-group {
+	display: flex;
 }
