[1.4.1]1.Fancybox相关调整;2.部分样式bug修复

--- a/src/styles/website/cosplaytele.com.scss
+++ b/src/styles/website/cosplaytele.com.scss
@@ -21,6 +21,6 @@ img.fancybox-image {
 	border-radius: unset;
 }
 
-.f-thumbs__track {
-	--progress: 1;
+.f-thumbs__slide__button {
+	--clip-path: none !important;
 }
