[1.4.4]新增`window.open`方法监听器,防止部分站点篡改该方法

--- a/src/styles/fix.scss
+++ b/src/styles/fix.scss
@@ -31,3 +31,11 @@ div[data-v-app]:has(.var-transition-group .var-snackbar) {
 	position: relative;
 	z-index: 2147483647;
 }
+
+svg {
+	vertical-align: initial;
+}
+
+body {
+	line-height: initial;
+}
