--- a/src/styles/website/cosplaytele.com.scss
+++ b/src/styles/website/cosplaytele.com.scss
@@ -7,7 +7,9 @@ textarea {
 	margin: unset;
 }
 button {
-	min-height: unset;
+	box-sizing: border-box;
+	min-height: auto;
+	overflow: hidden;
 	i {
 		top: unset;
 	}
