[1.4.19] 详情见更新日志

--- a/src/styles/fancybox/fix.scss
+++ b/src/styles/fancybox/fix.scss
@@ -18,3 +18,9 @@
 .fancybox__html5video {
 	display: block !important;
 }
+
+.web-img-collector-container {
+	.f-button {
+		background: unset;
+	}
+}
